# realsense-pytorch

./: .dockerignore  .env.jetson.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.jetson  docker-compose.jetson.yml  export_tensorrt.py  main.py  optimization_report.md  package.xml  pyproject.toml  requirements.txt
examples/: opencv_viewer_example.py
models/: common.py  experimental.py
realsense_yolov7/: __init__.py  app.py  config.py  realsense_stream.py  ros_image_node.py  tensorrt_detector.py  yolov7_detector.py
scripts/: install_nvidia_pytorch.sh
utils/: autoanchor.py  datasets.py  general.py  google_utils.py  loss.py  plots.py  torch_utils.py
